# duolingo-clone

./: .env.example  .gitignore  AGENTS.md  README.md  app.json  package-lock.json  package.json  skills-lock.json  tsconfig.json
src/app/: _layout.tsx  global.css  index.tsx  language.tsx  onboarding.tsx
src/app/(tabs)/: _layout.tsx  ai-teacher.tsx  chat.tsx  index.tsx  learn.tsx  profile.tsx
src/app/lesson/: [unitId].tsx  _layout.tsx
src/components/: tab-placeholder-screen.tsx
src/components/audio-lesson/: audio-lesson-agent-status.tsx  audio-lesson-controls.tsx  audio-lesson-feedback-card.tsx  audio-lesson-header.tsx  audio-lesson-session-status.tsx  audio-lesson-stage.tsx  (+1 more)
src/constants/: images.ts  tab-navigation.ts
src/data/: cafe-lessons.ts  extra-language-lessons.ts  languages.ts  lessons.ts  units.ts
src/hooks/: use-language-store-hydration.ts  use-live-captions.ts  use-social-auth.ts  use-stream-audio-lesson.ts  use-vision-agent.ts
src/lib/: api.ts  audio-lesson-data.ts  auth-navigation.ts  clerk.ts  fonts.ts  home-data.ts  lesson-screen-data.ts  stream-api.ts  stream-auth.ts  stream-client-config.ts  stream-server.ts  vision-agent-api.ts  vision-agent-server.ts
src/prompts/: 06-content-system.md  14-vision-agents.md  17-live-captions.md  19-ux-ui-fixes.md
src/store/: language-store.ts  progress-store.ts
src/theme/: colors.ts  fonts.ts  index.ts  typography.ts
src/types/: learning.ts  live-caption.ts  stream.ts
vision-agent/: README.md  call_permissions.py  lesson_context.py  live_captions.py  main.py  pyproject.toml
(+17 files in other folders)
